<resources>
    <string name="app_name">SafeZone</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="email_id_text">Email ID</string>
    <string name="welcome_to_safe_zone_text">Welcome to Safe Zone!</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="title_activity_location">Map</string>
    <string name="permission_rationale_location">permission needed dedoooo</string>
    <string name="permission_required_toast">permission wala toast needed</string>
    <string name="location_permission_denied">permission kyu nahi deetette</string>
    <string name="title_activity_confirmation_screen">ConfirmationScreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="channel_name_sticky_tracking">Sticky Location For Trascking</string>
    <string name="channel_description_sticky_tracking">Description location tracking</string>
    <string name="text_quarantine_legal_message">You are about to start quarantine activity. \nYou will be monitored for 14 days once you start this. This can not be undone.</string>
    <string name="button_start_tracking_text">Start Tracking</string>


    <!-- firebase -->
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="start_phone_auth">Send OTP</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="sign_out">Sign Out</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="signed_in">Signed In</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="text_observation_started_message">You\'re all set! Please proceed to upload your first status.</string>
    <string name="button_confirm_location">Confirm Location</string>
    <string name="text_observation_warning_error">You seem to be out of your quarantine location! The government enforcement authorities have been informed.</string>
    <string name="text_observation_user_confirm_message">Please confirm that you are at your isolation location.</string>
    <string name="checkBox_under_observation_15_days">I will be under observation for 15 days</string>
    <string name="checkBox_upload_photo">I will be asked to upload my photo at random intervals</string>
    <string name="checkBox_keep_location_on">I will keep my GPS location on</string>
    <string name="button_open_camera">Open Camera</string>
    <string name="title_activity_verification_done">VerificationDoneActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_thank_you_verification">Thank you!</string>
    <string name="checkBox_present_isolation_location">I am present at my isolation location</string>
    <string name="dependent_details_text"> Please Enter Dependent Details </string>
    <string name="dependent1_first_name_text" >Dependent 1 Name : </string>
    <string name="dependent2_first_name_text" >Dependent 1 Phone Number : </string>
    <string name="dependent1_phone_number_text" >Dependent 2 Name : </string>
    <string name="dependent2_phone_number_text" >Dependent 2 Phone number : </string>

</resources>
