<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="30dp"
    android:layout_marginRight="20dp"
    tools:context=".activity.StartQuarantineActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_content_upper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/textLegalDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/text_quarantine_legal_message"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBox_under_observation_15_days"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkBox_under_observation_15_days" />

        <CheckBox
            android:id="@+id/checkBox_upload_photo"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkBox_upload_photo" />
        <CheckBox
            android:id="@+id/checkBox_keep_location_on"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkBox_keep_location_on" />
        <CheckBox
            android:id="@+id/checkBox_present_at_isolation_location"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkBox_present_isolation_location" />


    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_start_tracking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:enabled="false"
            android:visibility="invisible"
            android:textSize="25dp"
            android:ellipsize="middle"
            android:background="@drawable/button_shape"
            android:text="@string/button_start_tracking_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>



</LinearLayout>