<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@drawable/firebase_lockup_400" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/safezone_logo" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/phoneAuthFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2.0">

                <EditText
                    android:id="@+id/fieldPhoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="@string/hint_phone_number"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/fieldVerificationCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="@string/hint_verification_code"
                    android:inputType="number" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonStartVerification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"

                    android:layout_marginTop="15dp"
                    android:background="#8BDE10"
                    android:fadingEdge="horizontal|vertical"
                    android:gravity="center_horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:radius="7dp"
                    android:shape="rectangle"
                    android:textSize="20dp"
                    android:textColor="@color/places_text_white_alpha_87"

                    android:text="@string/start_phone_auth"
                    android:textAlignment="center"
/>

                <Button
                    android:id="@+id/buttonVerifyPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"

                    android:layout_marginTop="15dp"
                    android:background="#8BDE10"
                    android:fadingEdge="horizontal|vertical"
                    android:gravity="center_horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:radius="7dp"
                    android:shape="rectangle"
                    android:textSize="20dp"
                    android:textColor="@color/places_text_white_alpha_87"

                    android:text="@string/verify_phone_auth"

                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/textResend"
                    android:layout_below="@id/buttonVerifyPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="@dimen/button_horizontal_margin"
                    android:layout_marginEnd="@dimen/button_horizontal_margin"
                    android:visibility="invisible"
                    android:layout_weight="1.0"
                    android:text="@string/resend_phone_auth" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signedInButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:weightSum="1.0">

            <Button
                android:id="@+id/signOutButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/sign_out"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>